Fixing vertical alignment of the image

--- a/packages/block-library/src/media-text/style.scss
+++ b/packages/block-library/src/media-text/style.scss
@@ -31,5 +31,5 @@
 .wp-block-media-text > figure > video {
 	max-width: unset;
 	width: 100%;
-	margin-bottom: -6px;
+	vertical-align: middle;
 }
